# zipapps

./: .gitignore  LICENSE  README.md  changelog.md  mock_main.py  old_doc.md  pyproject.toml  setup.py  test_utils.py
.github/workflows/: pythonpackage.yml
examples/: test_lib_versions.py
uv_zipapps_gui/: README.md  pyproject.toml  uv_zipapps_gui.py
zipapps/: __init__.py  __main__.py  _entry_point.py  _entry_point.py.template  _entry_point_shell.py  activate_zipapps.py  download_python.py  ensure_zipapps.py  ensure_zipapps.py.template  ensure_zipapps_template.py  entry_point.py.template  freezing.py  main.py  uv_download_python.py
zipapps_gui/: gui_main.py  zipapps_gui.py
